--- a/host_vars/localgw01/nginx.yml
+++ b/host_vars/localgw01/nginx.yml
@@ -4,6 +4,9 @@ __nginx_upstreams_host:
   - name: syncthing
     servers: ["{{ hostvars['theia'].local_ips.vm }}:8384"]
 
+  - name: motion
+    servers: ["{{ hostvars['drepi'].ansible_host }}:{{ hostvars['drepi'].motion_port }}"]
+
 __nginx_vhosts_host:
   - filename: syncthing.conf
     server_name: syncthing
