Fix provisioned_disks for gitrun and prom

--- a/group_vars/gitrun/vars.yml
+++ b/group_vars/gitrun/vars.yml
@@ -1,7 +1,7 @@
 ---
 
 provisioned_disks:
-  - dev: "/dev/disk/by-path/pci-0000:03:00.0-scsi-0:0:1:0"
+  - dev: "/dev/disk/by-id/virtio-data01"
     vols:
       - name: docker
         path: "/var/lib/docker"
