--- a/group_vars/prom/vars.yml
+++ b/group_vars/prom/vars.yml
@@ -1,14 +1,14 @@
 ---
 
 provisioned_disks:
-  - dev: "/dev/disk/by-path/pci-0000:03:00.0-scsi-0:0:1:0"
+  - dev: "/dev/disk/by-id/virtio-data01"
     vols:
       - name: prometheus
         path: "/var/lib/prometheus"
         shrink: false
         size: "100%FREE"
 
-  - dev: "/dev/disk/by-path/pci-0000:03:00.0-scsi-0:0:2:0"
+  - dev: "/dev/disk/by-id/virtio-data02"
     vg: thanos
     vols:
       - name: vol01
