--- a/group_vars/prom/thanos.yml
+++ b/group_vars/prom/thanos.yml
@@ -9,6 +9,7 @@ compact_retention_raw: 30d
 compact_retention_5m: 90d
 compact_retention_1h: 1000d
 
+sidecar_prom_url: "http://{{ ansible_host }}:9090"
 sidecar_services: ["prometheus.service"]
 compact_services: "{{ sidecar_services }}"
 
