--- a/host_vars/theia/nginx/vhosts.yml
+++ b/host_vars/theia/nginx/vhosts.yml
@@ -6,9 +6,9 @@ nginx_vhosts:
     template: "{{ inventory_dir }}/files/webgw/nginx/default_reject.conf.j2"
 
   - filename: direct.conf
-    server_name: direct
+    server_name: "{{ inventory_hostname }}"
     template: "{{ inventory_dir }}/files/{{ inventory_hostname }}/nginx/direct.conf.j2"
 
   - filename: main.conf
-    server_name: main
+    server_name: www
     template: "{{ inventory_dir }}/files/{{ inventory_hostname }}/nginx/main.conf.j2"
