--- a/requirements.yml
+++ b/requirements.yml
@@ -3,6 +3,7 @@
 collections:
   - name: ansible.posix
   - name: ansible.utils
+  - name: community.docker
   - name: community.general
     version: '>=5.2'
 
