--- a/group_vars/thinkcentre/networkd.yml
+++ b/group_vars/thinkcentre/networkd.yml
@@ -3,41 +3,162 @@
 __host_num: "{{ ansible_host.split('.')[-1] }}"
 
 networkd_netdevs:
-  - eno1.2: |
+  - bond0: |
       [NetDev]
-      Name=eno1.2
+      Name=bond0
+      Description=Trunk bond interface
+      Kind=bond
+      MTUBytes=9000
+
+      [Bond]
+      Mode=active-backup
+      PrimaryReselectPolicy=always
+      MIIMonitorSec=1s
+
+  - bond0.2: |
+      [NetDev]
+      Name=bond0.2
       Kind=vlan
       MTUBytes=9000
 
       [VLAN]
       Id=2
 
-  - eno1.100: |
+  - bond0.10: |
       [NetDev]
-      Name=eno1.100
+      Name=bond0.10
+      Kind=vlan
+      MTUBytes=1500
+
+      [VLAN]
+      Id=10
+
+  - bond0.20: |
+      [NetDev]
+      Name=bond0.20
+      Kind=vlan
+      MTUBytes=1500
+
+      [VLAN]
+      Id=20
+
+  - bond0.50: |
+      [NetDev]
+      Name=bond0.50
+      Kind=vlan
+      MTUBytes=1500
+
+      [VLAN]
+      Id=50
+
+  - bond0.100: |
+      [NetDev]
+      Name=bond0.100
       Kind=vlan
       MTUBytes=1500
 
       [VLAN]
       Id=100
 
+  - SAN: |
+      [NetDev]
+      Name=SAN
+      Kind=bridge
+      MTUBytes=9000
+
+  - VM: |
+      [NetDev]
+      Name=VM
+      Kind=bridge
+      MTUBytes=1500
+
+  - NOINET: |
+      [NetDev]
+      Name=NOINET
+      Kind=bridge
+      MTUBytes=1500
+
+  - GENERAL: |
+      [NetDev]
+      Name=GENERAL
+      Kind=bridge
+      MTUBytes=1500
+
+  - MGMT: |
+      [NetDev]
+      Name=MGMT
+      Kind=bridge
+      MTUBytes=1500
+
 networkd_config:
+  - bond0: |
+      [Match]
+      Name=bond0
+
+      [Network]
+      VLAN=bond0.2
+      VLAN=bond0.10
+      VLAN=bond0.20
+      VLAN=bond0.50
+      VLAN=bond0.100
+      LinkLocalAddressing=no
+      IPv6AcceptRA=no
+
+  - bond0.2: |
+      [Match]
+      Name=bond0.2
+
+      [Network]
+      Bridge=SAN
+
+  - bond0.10: |
+      [Match]
+      Name=bond0.10
+
+      [Network]
+      Bridge=VM
+
+  - bond0.20: |
+      [Match]
+      Name=bond0.20
+
+      [Network]
+      Bridge=NOINET
+
+  - bond0.50: |
+      [Match]
+      Name=bond0.50
+
+      [Network]
+      Bridge=GENERAL
+
+  - bond0.100: |
+      [Match]
+      Name=bond0.100
+
+      [Network]
+      Bridge=MGMT
+
+  - enp1s0f0: |
+      [Match]
+      Name=enp1s0f0
+
+      [Network]
+      Description=Trunk bond interface primary
+      Bond=bond0
+      PrimarySlave=true
+
   - eno1: |
       [Match]
       Name=eno1
 
-      [Link]
-      MTUBytes=9000
-
       [Network]
-      VLAN=eno1.2
-      VLAN=eno1.100
-      LinkLocalAddressing=no
-      IPv6AcceptRA=no
+      Description=Trunk bond interface secondary
+      Bond=bond0
 
-  - eno1.2: |
+  - SAN: |
       [Match]
-      Name=eno1.2
+      Name=SAN
 
       [Network]
       Address={{ all_net.san.cidr | ansible.utils.ipaddr(__host_num) }}
@@ -45,9 +166,21 @@ networkd_config:
       [Route]
       Scope=link
 
-  - eno1.100: |
+  - VM: |
       [Match]
-      Name=eno1.100
+      Name=VM
+
+  - NOINET: |
+      [Match]
+      Name=NOINET
+
+  - GENERAL: |
+      [Match]
+      Name=GENERAL
+
+  - MGMT: |
+      [Match]
+      Name=MGMT
 
       [Network]
       Address={{ all_net.mgmt.cidr | ansible.utils.ipaddr(__host_num) }}
