--- a/roles/auto_ssh/tasks/main.yml
+++ b/roles/auto_ssh/tasks/main.yml
@@ -72,8 +72,8 @@
     create: true
     mode: 0644
     block: |
-      {% for h in __host_keys.results | sort %}
-      {{ h.stdout }}
+      {% for k in __host_keys.results | map(attribute='stdout') | sort %}
+      {{ k }}
       {% endfor %}
 
 - name: Add target host names to /etc/hosts
