Configure grub and cryptenroll on thinkcentres

--- a/playbooks/thinkcentre.yml
+++ b/playbooks/thinkcentre.yml
@@ -3,5 +3,11 @@
 - name: Configure ThinkCentre machines
   hosts: thinkcentre
   roles:
+    - role: grub
+      tags: ["grub"]
+
+    - role: systemd_cryptenroll
+      tags: ["cryptenroll"]
+
     - role: systemd_networkd
       tags: ["networkd"]
